# anitya

./: .coverage.fedora.14545.XEVqverx  .coverage.fedora.14545.XdQCFWcx  .coverage.fedora.15059.XFupLsNx  .coveragerc  .dockerignore  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zuul.yaml  Auth_ERROR_README.md  CHANGELOG.rst  CODEOWNERS  Containerfile.cs.dev  Containerfile.dev  Containerfile.lc.dev  Containerfile.web.dev  Dockerfile  MANIFEST.in  Makefile  README.rst  Vagrantfile  Vagrantfile.example  alembic.ini  anitya.toml.example  anitya.wsgi  anitya_cron.py  cnucnu.conf  cnucnu_cron.py  cnucnuweb.wsgi  container-compose.yml  createdb.py  migrate_wiki.py  mypatch.diff  mypy.cfg  nosetests  pyproject.toml  readthedocs.txt  renovate.json  (+8 more)
.container/consumer/: motd
.container/web/: config.toml  motd
.dependabot/: config.yml
.github/workflows/: codeql.yml  label-when-deployed.yaml  main.yaml  pre-commit.yml
.s2i/: environment
alembic/: env.py
alembic/versions/: 2925648d8cc3_add_a_version_prefix_field.py  3fae8239eeec_add_an_api_token_table.py  571bd07533a9_add_insecure_column_to_projects_table.py  8075a90bbac0_add_a_version_scheme_column_to_projects.py  921c612ba0da_model_upstream_ecosystems.py  9c29da0af3af_populate_ecosystem_data.py  a52d2fe99d4f_users.py  b9201d816075_remove_the_backends_and_ecosystems_.py  feeaa70ead67_social_authentication_table.py
anitya/: __init__.py  admin.py  api.py  api_v2.py  app.py  app.py.orig  auth.py  authentication.py  check_service.py  compat.py  config.py  debug.py  default_config.py  doc_utils.py  forms.py  librariesio_consumer.py  mail_logging.py  model.py  plugins.py  reverse_proxy.py  sar.py  ui.py  wsgi.py
anitya/backends/: __init__.py  pypi.py
anitya/db/: __init__.py  events.py  meta.py  models.py
anitya/docs/: about.rst  fedmsg.rst
anitya/lib/: __init__.py  events.py  exceptions.py  model.py  notify.py  plugins.py  utilities.py  xml2dict.py
anitya/static/: bootstrap  jquery-ui-1.10.4.custom.css  jquery-ui-1.10.4.custom.min.js  jquery-ui-1.11.1.min.css  jquery-ui.min-1.11.1.js  package-lock.json  package.json
anitya/templates/: api.html  distro_add.html  distro_add_edit.html  (+28 more)
anitya_schema/: README.rst  get_fixture_data.py  setup.py
ansible/: docker-playbook.yml  vagrant-playbook.yml
ci/: test-tox.yaml
cnucnuweb/: __init__.py  admin.py  api.py  app.py  default_config.py  forms.py  model.py  ui.py
docs/: Makefile  admin-guide.rst  admin-user-guide.rst  api.rst  conf.py  contributing.rst  database.rst  generate_db_schema  glossary.rst  index.rst  integrating-with-anitya.rst  release-monitoring-admin-guide.rst  release-notes.rst  user-guide.rst
fedmsg.d/: fedmsg-config.py
files/: 0001-Remove-conditional-requires.patch  alembic.ini  anitya.cfg.sample  anitya.conf  anitya.spec  anitya.toml.sample  anitya.wsgi  anitya.yaml.sample  anitya_cron.py  config.toml.sample  docker.sh  docker_apache.conf  migrate_wiki.py
news/: 1013.bug  1014.api  1015.feature  1016.bug  1026.bug  1029.bug  1033.api  1037.feature  1042.bug  1056.bug  1063.feature  1066.feature  1068.bug  1139.feature  1143.bug  1148.bug  1154.other  1222.feature  1273.bug  1284.bug  1286.bug  1288.dev  1387.bug  1389.bug  1390.bug  1402.bug  1442.api  1448.api  1453.dev  1463.api  1464.api  1468.feature  1504.dev  1504.feature  1520.dev  1536.bug  1566.feature  1586.bug  1590.bug  1627.feature  (+193 more)
requirements/: el7-requirements.txt  readthedocs.txt  requirements.txt  test_requirements.txt
tests/: __init__.py  test_anityalib.py  test_backend_bitbucket.py  test_backend_cpan.py  test_backend_crates.py  test_backend_custom.py  test_backend_debian.py  test_backend_drupal6.py  test_backend_drupal7.py  test_backend_folder.py  test_backend_freshmeat.py  test_backend_github.py  test_backend_gnome.py  test_backend_gnu.py  test_backend_google.py  test_backend_hackage.py  test_backend_launchpad.py  test_backend_maven.py  test_backend_npmjs.py  test_backend_packagist.py  test_backend_pagure.py  test_backend_pear.py  test_backend_pecl.py  test_backend_pypi.py  test_backend_rubygems.py  test_backend_sourceforge.py  test_backend_stackage.py  test_backends.py  test_distro.py  test_flask.py  test_flask_admin.py  test_flask_api.py  test_flask_api_v2.py  test_model.py  test_plugins.py  test_project.py  test_style.py
(+433 files in other folders)
